--- a/DockerFile
+++ b/DockerFile
@@ -1,6 +1,6 @@
-FROM golang:latest
+FROM golang:1.22.4
 WORKDIR /usr/src/app
 
 RUN go install github.com/air-verse/air@latest
-COPY . .
+COPY application .
 RUN go mod tidy
